# atmacup17

./: .gitignore  README.md  pyproject.toml
baseline_template/nlp/classification/: deberta.ipynb  gemma-9b-it.ipynb
baseline_template/nlp/regression/: deberta.ipynb
baseline_template/nlp/token_classification/: deberta.ipynb
baseline_template/table/: lgb_classification_polars.ipynb  lgb_regression_polars.ipynb
eda/: add_index.ipynb  eda.ipynb  full_text_eda.ipynb  high_rating_low_pred_analysis.ipynb  llm_emb_pca.ipynb  llm_embedding.ipynb  make_fold.ipynb  make_fold_only_rec.ipynb  make_fold_only_rec_10fold.ipynb  make_pseudo_data.ipynb  make_pseudo_full_data.ipynb  potive_feedback.ipynb  test_count_spelling_error.ipynb  test_data_has_zero_data.ipynb  tfidf.ipynb  train_count_spelling_error.ipynb  train_test.ipynb
exp/: e001.ipynb  e002.ipynb  e003.ipynb  e004-0-1-2-ens.ipynb  e004.ipynb  e004_fold1.ipynb  e004_fold2.ipynb  e005-6-7-ens-rank.ipynb  e005-6-7-ens.ipynb  e005.ipynb  e006.ipynb  e007.ipynb  e008.ipynb  e009.ipynb  e010.ipynb  e011.ipynb  e012.ipynb  e013.ipynb  e013_lrg.ipynb  e014.ipynb  e015.ipynb  e016.ipynb  e017.ipynb  e018.ipynb  e019.ipynb  e020.ipynb  e021.ipynb  e022.ipynb  e023.ipynb  e024.ipynb  e025.ipynb  e026.ipynb  e027.ipynb  e028.ipynb  e029.ipynb  e030.ipynb  e031.ipynb  e032.ipynb  e033.ipynb  e034.ipynb  (+41 more)
shell/: do_notebook_by_cli.sh  download_competition_data.sh  make_github_key_and_set_email.sh  multiple_run.sh  set_kaggle_api.sh  setting_shell.sh  sleep.sh
